tests/expected_invalid_try_fail_contracts.diag.out
<input>:19:5: error: 'try' expects failure reason 'ParseFailure', got 'OpenFailure'
        try open()
        ^^^^^^^^^^
<input>:23:5: error: `try` requires an operand that may fail (a call to a function with `fails`)
        try value()
        ^^^^^^^^^^^
<input>:27:5: error: 'fail' is only valid inside a function with 'fails'
        fail Bad
        ^^^^^^^^
